--- a/linters/adidas.yaml
+++ b/linters/adidas.yaml
@@ -153,7 +153,7 @@ rules:
     then:
       function: pattern
       functionOptions:
-        notMatch: "/^https:/"
+        notMatch: "/^http:/"
 
   adidas-oas3-response-success-hal:
     description: "All success responses MUST be of media type `application/hal+json` "
