--- a/.github/workflows/mainflow.yml
+++ b/.github/workflows/mainflow.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   run_linter:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
